--- a/ComfyGray.theme.css
+++ b/ComfyGray.theme.css
@@ -3,10 +3,9 @@
 * @version 1.0
 * @author carrot#8812
 * @description A theme with a nice shade of gray everywhere! Its super comfy.
-* @source not-set
+* @source https://github.com/ObjectiveSlayer/ComfyGray
 * @invite not-set
 */
-
 
 /* MAIN CSS STYLESHEET... DO NOT REMOVE THIS!! */
 @import url(https://objectiveslayer.github.io/ComfyGray/ComfyGray.css);
@@ -18,10 +17,10 @@
 
 
 /* icon change import by Obscure.#4719 */
-@import url(https://objectiveslayer.github.io/ComfyGray/addons/icon%20replace%20by%20Obscure.%234719.css);
+@import url(https://objectiveslayer.github.io/ComfyGray/addons/icon-replace.css);
 
 /* radial status by Gibbu#1211 */
-@import url(https://objectiveslayer.github.io/ComfyGray/addons/radial%20status%20icons%20by%20Gibbu%231211.css);
+@import url(https://objectiveslayer.github.io/ComfyGray/addons/radial-status.css);
 
 /* server rings */
 @import url(https://objectiveslayer.github.io/ComfyGray/addons/server-rings.css);
